crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__percent-format-mixed-positional-and-named_F50x.py.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F506 `%`-format string has mixed positional and named placeholders
 --> F50x.py:2:1
  |
1 | '%(foo)' % {'foo': 'bar'}  # F501
2 | '%s %(foo)s' % {'foo': 'bar'}  # F506
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
3 | '%(foo)s %s' % {'foo': 'bar'}  # F506
4 | '%j' % (1,)  # F509
  |

F506 `%`-format string has mixed positional and named placeholders
 --> F50x.py:3:1
  |
1 | '%(foo)' % {'foo': 'bar'}  # F501
2 | '%s %(foo)s' % {'foo': 'bar'}  # F506
3 | '%(foo)s %s' % {'foo': 'bar'}  # F506
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
4 | '%j' % (1,)  # F509
5 | '%s %s' % (1,)  # F507
  |

F506 `%`-format string has mixed positional and named placeholders
  --> F50x.py:11:1
   |
 9 | '%(bar)s' % (1, 2, 3)  # F502
10 | '%s %s' % {'k': 'v'}  # F503
11 | '%(bar)*s' % {'bar': 'baz'}  # F506, F508
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
12 |
13 | # ok: single %s with mapping
   |
