crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__print_in_body_after_shadowing_except.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F841 [*] Local variable `x` is assigned to but never used
 --> <filename>:7:25
  |
5 |     try:
6 |         1 / 0
7 |     except Exception as x:
  |                         ^
8 |         pass
  |
help: Remove assignment to unused variable `x`
  |
6 |         1 / 0
  -     except Exception as x:
7 +     except Exception:
8 |         pass
  |
