crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__redefined-while-unused_F811_0.py.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F811 Redefinition of unused `bar` from line 6
  --> F811_0.py:10:5
   |
10 | def bar():
   |     ^^^ `bar` redefined here
11 |     pass
   |
  ::: F811_0.py:6:5
   |
 5 | @foo
 6 | def bar():
   |     --- previous definition of `bar` here
 7 |     pass
   |
help: Remove definition: `bar`
