crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__redefined-while-unused_F811_1.py.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F811 Redefinition of unused `FU` from line 1
 --> F811_1.py:1:25
  |
1 | import fu as FU, bar as FU
  |              --         ^^ `FU` redefined here
  |              |
  |              previous definition of `FU` here
help: Remove definition: `FU`
