crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__redefined-while-unused_F811_12.py.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F811 Redefinition of unused `mixer` from line 2
 --> F811_12.py:6:20
  |
1 | try:
2 |     from aa import mixer
  |                    ----- previous definition of `mixer` here
3 | except ImportError:
4 |     pass
5 | else:
6 |     from bb import mixer
  |                    ^^^^^ `mixer` redefined here
7 | mixer(123)
  |
help: Remove definition: `mixer`
