crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__redefined-while-unused_F811_15.py.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F811 Redefinition of unused `fu` from line 1
 --> F811_15.py:4:5
  |
4 | def fu():
  |     ^^ `fu` redefined here
5 |     pass
  |
 ::: F811_15.py:1:8
  |
1 | import fu
  |        -- previous definition of `fu` here
help: Remove definition: `fu`
