crates/nuff_linter/src/rules/pyflakes/snapshots/nuff_linter__rules__pyflakes__tests__redefined-while-unused_F811_16.py.snap
---
source: crates/nuff_linter/src/rules/pyflakes/mod.rs
---
F811 Redefinition of unused `fu` from line 3
 --> F811_16.py:8:13
  |
6 | def bar():
7 |     def baz():
8 |         def fu():
  |             ^^ `fu` redefined here
9 |             pass
  |
 ::: F811_16.py:3:8
  |
1 | """Test that shadowing a global with a nested function generates a warning."""
2 |
3 | import fu
  |        -- previous definition of `fu` here
help: Remove definition: `fu`
